problrm solving in jankar vai

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li>8. Destructiong in array & objects</li>
         <li>9. Inhanced Objects </li>
     </ul>
-    <script src="Es6.js"></script>
+    <script src="sEs6.js"></script>
+    <script src="exam.js"></script>
 </body>
 </html>
